--- a/.gitignore
+++ b/.gitignore
@@ -17,7 +17,7 @@ dist/
 downloads/
 eggs/
 .eggs/
-#lib/
+lib/
 lib64/
 parts/
 sdist/
@@ -105,3 +105,6 @@ venv.bak/
 
 # mypy
 .mypy_cache/
+
+# serialize extensions
+.yml
