--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,17 @@
 opencv_contrib_python==4.1.0.25
+python_speech_features==0.6
+scikit_learn==0.20.3
+autopep8==1.4.4
+colorama==0.4.1
+coloredlogs==10.0
+humanfriendly==4.18
+numpy==1.16.2
+opencv-contrib-python==4.1.0.25
+Pillow==6.0.0
+PyAudio==0.2.11
+pycodestyle==2.5.0
+pyreadline==2.1
+python-speech-features==0.6
+scikit-learn==0.20.3
 scipy==1.2.1
 SpeechRecognition==3.8.1
-python_speech_features==0.6
-numpy==1.16.2
-Pillow==6.0.0
-scikit_learn==0.20.3
